[package]
name = "rucy"
version = "0.1.0"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
mrusty = { path = '../mrusty' }
rucy-elfgen  = { path = "../rucy-elfgen" }
rucy-libelf-sys = { path = "../rucy-libelf-sys" }
rucy-mruby-prelude = { path = "../rucy-mruby-prelude" }
rucy-mruby-sys-consts = { path = "../rucy-mruby-sys-consts" }